--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node": "12.22.3"
   },
   "dependencies": {
+    "@nestjs/axios": "0.0.6",
     "@nestjs/common": "^8.1.1",
     "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.1.1",
@@ -32,6 +33,7 @@
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/typeorm": "^8.0.3",
     "@types/bcrypt": "^5.0.0",
+    "axios": "^0.26.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^14.3.2",
     "passport": "^0.5.2",
